Made changes to read and save data in h5 files

--- a/Data/preprocessing_script.ipynb
+++ b/Data/preprocessing_script.ipynb
@@ -211,18 +211,18 @@
     "user_data['sex_encoded'] = sex_encoder.fit_transform(user_data['sex'])\n",
     "\n",
     "country_counts = user_data['country'].value_counts()\n",
-    "selected_countries = country_counts[country_counts > 500].index.tolist()\n",
+    "selected_countries = country_counts[country_counts > 200].index.tolist()\n",
     "\n",
     "user_data['country'] = user_data['country'].apply(lambda x: x if x in selected_countries else 'OTHER')\n",
     "\n",
     "user_data['country_encoded'] = country_encoder.fit_transform(user_data['country'])\n",
-    "user_data.to_csv('/data/users.csv')\n",
+    "user_data.to_csv('users.csv')\n",
     "del user_data\n",
     "\n",
     "df_grouped = df.groupby([\"track_name\", \"artist\"])[\"interactions\"].sum().reset_index()\n",
     "df_grouped[\"song_id\"] = df_grouped.index\n",
     "result_df = df_grouped[[\"track_name\", \"artist\", \"song_id\"]]\n",
-    "result_df.to_csv(\"/data/items.csv\", index=False)\n",
+    "result_df.to_csv(\"items.csv\", index=False)\n",
     "\n",
     "merged_df = df.merge(result_df, on=[\"track_name\", \"artist\"])\n",
     "\n",
@@ -237,7 +237,7 @@
     "\n",
     "train_df, temp_df = train_test_split(pivot_df, test_size=0.2, random_state=42)\n",
     "del pivot_df\n",
-    "train_df.to_csv(\"/data/user_interactions_train.csv\")\n",
+    "train_df.to_hdf('user_interactions_train.h5', key='user_train', mode='w') \n",
     "del train_df\n",
     "valid_df, test_df = train_test_split(temp_df, test_size=0.5, random_state=42)\n",
     "del temp_df\n",
@@ -252,8 +252,8 @@
     "valid_df_te.loc[:, :] = (valid_df_te > 0).astype(float)\n",
     "valid_df_tr = valid_df_tr.astype(float)\n",
     "\n",
-    "valid_df_tr.to_csv(\"/data/user_interactions_validation_tr.csv\")\n",
-    "valid_df_te.to_csv(\"/data/user_interactions_validation_te.csv\")\n",
+    "valid_df_tr.to_hdf(\"user_interactions_validation_tr.h5\",key=\"user_valid_tr\", mode='w')\n",
+    "valid_df_te.to_hdf(\"user_interactions_validation_te.h5\",key=\"user_valid_te\", mode='w')\n",
     "del valid_df_tr\n",
     "del valid_df_te\n",
     "test_df_tr = test_df.copy()\n",
@@ -265,8 +265,8 @@
     "test_df_te.loc[:, :] = (test_df_te > 0).astype(float)\n",
     "test_df_tr = test_df_tr.astype(float)\n",
     "\n",
-    "test_df_tr.to_csv(\"/data/user_interactions_test_tr.csv\")\n",
-    "test_df_te.to_csv(\"/data/user_interactions_test_te.csv\")"
+    "test_df_tr.to_hdf(\"user_interactions_test_tr.h5\",key=\"user_test_tr\", mode='w')\n",
+    "test_df_te.to_hdf(\"user_interactions_test_te.h5\",key=\"user_test_te\", mode='w')"
    ]
   }
  ],
