--- a/implementation_temp.ipynb
+++ b/implementation_temp.ipynb
@@ -210,6 +210,95 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'data' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m/home/mduzah/Thesis_work/thesis/implementation_temp.ipynb Cell 5\u001b[0m line \u001b[0;36m1\n\u001b[0;32m----> <a href='vscode-notebook-cell://ssh-remote%2Buzairahmd.rd.tuni.fi/home/mduzah/Thesis_work/thesis/implementation_temp.ipynb#X25sdnNjb2RlLXJlbW90ZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mclass\u001b[39;00m \u001b[39mLFM1bDataset\u001b[39;00m(data\u001b[39m.\u001b[39mDataset):\n\u001b[1;32m      <a href='vscode-notebook-cell://ssh-remote%2Buzairahmd.rd.tuni.fi/home/mduzah/Thesis_work/thesis/implementation_temp.ipynb#X25sdnNjb2RlLXJlbW90ZQ%3D%3D?line=1'>2</a>\u001b[0m     \u001b[39mdef\u001b[39;00m \u001b[39m__init__\u001b[39m(\n\u001b[1;32m      <a href='vscode-notebook-cell://ssh-remote%2Buzairahmd.rd.tuni.fi/home/mduzah/Thesis_work/thesis/implementation_temp.ipynb#X25sdnNjb2RlLXJlbW90ZQ%3D%3D?line=2'>3</a>\u001b[0m         \u001b[39mself\u001b[39m,\n\u001b[1;32m      <a href='vscode-notebook-cell://ssh-remote%2Buzairahmd.rd.tuni.fi/home/mduzah/Thesis_work/thesis/implementation_temp.ipynb#X25sdnNjb2RlLXJlbW90ZQ%3D%3D?line=3'>4</a>\u001b[0m         root,\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     <a href='vscode-notebook-cell://ssh-remote%2Buzairahmd.rd.tuni.fi/home/mduzah/Thesis_work/thesis/implementation_temp.ipynb#X25sdnNjb2RlLXJlbW90ZQ%3D%3D?line=10'>11</a>\u001b[0m         upper\u001b[39m=\u001b[39m\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m,\n\u001b[1;32m     <a href='vscode-notebook-cell://ssh-remote%2Buzairahmd.rd.tuni.fi/home/mduzah/Thesis_work/thesis/implementation_temp.ipynb#X25sdnNjb2RlLXJlbW90ZQ%3D%3D?line=11'>12</a>\u001b[0m     ):\n\u001b[1;32m     <a href='vscode-notebook-cell://ssh-remote%2Buzairahmd.rd.tuni.fi/home/mduzah/Thesis_work/thesis/implementation_temp.ipynb#X25sdnNjb2RlLXJlbW90ZQ%3D%3D?line=12'>13</a>\u001b[0m         \u001b[39msuper\u001b[39m(LFM1bDataset, \u001b[39mself\u001b[39m)\u001b[39m.\u001b[39m\u001b[39m__init__\u001b[39m()\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'data' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "# Reading h5 format\n",
+    "class LFM1bDataset(data.Dataset):\n",
+    "    def __init__(\n",
+    "        self,\n",
+    "        root,\n",
+    "        item_mapper,\n",
+    "        user_mapper,\n",
+    "        target=['country_encoded'],\n",
+    "        fold_in=True,\n",
+    "        split=\"train\",\n",
+    "        conditioned_on=None,\n",
+    "        upper=-1,\n",
+    "    ):\n",
+    "        super(LFM1bDataset, self).__init__()\n",
+    "        assert os.path.exists(root), \"root: {} not found.\".format(root)\n",
+    "        self.root = root\n",
+    "\n",
+    "        assert split in [\"test\", \"inference\", \"train\", \"valid\"]\n",
+    "        self.split=split\n",
+    "\n",
+    "        out_data_dir = root\n",
+    "        self.target=target\n",
+    "        self.user_mapper = user_mapper\n",
+    "        if self.split == \"train\":\n",
+    "            self.train_data = pd.read_hdf(root+'user_interactions_train.h5',key=\"user_train\")\n",
+    "        elif self.split == \"valid\":\n",
+    "            self.vad_data_tr = pd.read_hdf(root+'user_interactions_validation_tr.h5',key=\"user_valid_tr\")\n",
+    "            self.vad_data_te = pd.read_hdf(root+'user_interactions_validation_te.h5',key=\"user_valid_te\")\n",
+    "        elif self.split == \"test\":\n",
+    "            self.test_data_tr = pd.read_hdf(root+'user_interactions_test_tr.h5',key=\"user_test_tr\")\n",
+    "            self.test_data_te = pd.read_hdf(root+'user_interactions_test_te.h5',key=\"user_test_te\")\n",
+    "        else:\n",
+    "            raise NotImplementedError\n",
+    "        \n",
+    "    \n",
+    "        if self.split == \"train\":\n",
+    "            self.n_users = self.train_data.shape[0]\n",
+    "        elif self.split == \"valid\":\n",
+    "            self.n_users = self.vad_data_tr.shape[0]\n",
+    "        elif self.split == \"test\":\n",
+    "            self.n_users = self.test_data_tr.shape[0]\n",
+    "        else:\n",
+    "            raise NotImplementedError\n",
+    "\n",
+    "\n",
+    "    def __len__(self):\n",
+    "        return self.n_users\n",
+    "\n",
+    "    def __getitem__(self, index):\n",
+    "        prof = np.zeros(1)\n",
+    "        if self.split == \"train\":\n",
+    "            data_tr, data_te = self.train_data.iloc[index].to_numpy(dtype='float32'), np.zeros(1)\n",
+    "            idx_user = self.train_data.index[index]\n",
+    "        elif self.split == \"valid\":\n",
+    "            # un comment line when vad_data_te is available\n",
+    "            data_tr, data_te = self.vad_data_tr.iloc[index].to_numpy(dtype='float32'), self.vad_data_te.iloc[index].to_numpy(dtype='float32')\n",
+    "            # data_tr, data_te = self.vad_data_tr.iloc[index].drop('user_id').to_numpy(dtype='float32'), np.zeros(1)\n",
+    "            idx_user = self.vad_data_tr.index[index]\n",
+    "        elif self.split == \"test\":\n",
+    "            data_tr, data_te = self.test_data_tr.iloc[index].to_numpy(dtype='float32'), self.test_data_te.iloc[index].to_numpy(dtype='float32')\n",
+    "            idx_user = self.test_data_tr.index[index]\n",
+    "\n",
+    "\n",
+    "        \n",
+    "        sensitive = self.user_mapper.loc[self.user_mapper.user_id == idx_user][\n",
+    "            self.target\n",
+    "        ].values[0]\n",
+    "        \n",
+    "        return data_tr, data_te, prof, idx_user, sensitive"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
